--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^8.14.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nedb": "^1.8.0",
